--- a/classes/July/31/calc.html
+++ b/classes/July/31/calc.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Calculator</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 </head>
@@ -39,12 +39,6 @@
 		<div class="row">
 			<div class="form-group">
 				<input type="text" name="txt" id="txt1" placeholder="Calculator" class="col-sm-5" class="form-control" onclick="calc()">
-			</div>
-			<div class="form-group">
-				<input type="text" name="txt" id="txt2" placeholder="Calculator" class="col-sm-5" class="form-control" onclick="calc()">
-			</div>
-			<div class="form-group">
-				<input type="text" name="txt" id="txt3" placeholder="Calculator" class="col-sm-5" class="form-control" onclick="calc()">
 			</div>
 		</div>
 		</form>
