--- a/classes/July/31/calc.html
+++ b/classes/July/31/calc.html
@@ -11,91 +11,67 @@
 		<form role="form">
 		<div class="row">
 			<div class="form-group">
-				<input type="text" name="txt" id="txt1" placeholder="Calculator" class="col-sm-5" class="form-control">
+				<input type="button" name="btn7" id="btn7" value="7" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc('btn7')">
+				<input type="button" name="btn8" id="btn8" value="8" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc('btn8')">
+				<input type="button" name="btn9" id="btn9" value="9" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc('btn9')">
+				<input type="button" name="btn9" id="btn/" value="/" class="col-sm-1 btn btn-success" class="form-control" onclick="calco('btn/')">
+				<input type="button" name="btn9" id="btn*" value="*" class="col-sm-1 btn btn-success" class="form-control" onclick="calco('btn*')">
 			</div>
 		</div>
 		<div class="row">
 			<div class="form-group">
-				<input type="button" name="CE" id="CE" value="CE" class="col-sm-1 btn btn-info" class="form-control" onclick="bckspc(id)">
-				<input type="button" name="CE" id="C" value="C" class="col-sm-1 btn btn-info" class="form-control" onclick="clr(id)">
-				<input type="button" name="btn." id="btn." value="." class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
+				<input type="button" name="btn7" id="btn4" value="4" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc('btn4')">
+				<input type="button" name="btn8" id="btn5" value="5" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc('btn5')">
+				<input type="button" name="btn9" id="btn6" value="6" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc('btn6')">
+				<input type="button" name="btn9" id="btn-" value="-" class="col-sm-1 btn btn-success" class="form-control" onclick="calco('btn-')">
+				<input type="button" name="btn9" id="btn+" value="+" class="col-sm-1 btn btn-success" class="form-control" onclick="calco('btn+')">
 			</div>
 		</div>
 		<div class="row">
 			<div class="form-group">
-				<input type="button" name="btn7" id="btn7" value="7" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn8" id="btn8" value="8" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn9" id="btn9" value="9" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn/" id="btn/" value="/" class="col-sm-1 btn btn-success" class="form-control" onclick="calco(id)">
-				<input type="button" name="btn*" id="btn*" value="*" class="col-sm-1 btn btn-success" class="form-control" onclick="calco(id)">
+				<input type="button" name="btn7" id="btn1" value="1" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc('btn1')">
+				<input type="button" name="btn8" id="btn2" value="2" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc('btn2')">
+				<input type="button" name="btn9" id="btn3" value="3" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc('btn3')">
+				<input type="button" name="btn9" id="btn." value="." class="col-sm-1 btn btn-success" class="form-control" onclick="calco('btn.')">
+				<input type="button" name="btn9" id="btn=" value="=" class="col-sm-1 btn btn-success" class="form-control" onclick="result('btn=')">
 			</div>
 		</div>
 		<div class="row">
 			<div class="form-group">
-				<input type="button" name="btn4" id="btn4" value="4" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn5" id="btn5" value="5" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn6" id="btn6" value="6" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn-" id="btn-" value="-" class="col-sm-1 btn btn-success" class="form-control" onclick="calco(id)">
-				<input type="button" name="btn+" id="btn+" value="+" class="col-sm-1 btn btn-success" class="form-control" onclick="calco(id)">
-			</div>
-		</div>
-		<div class="row">
-			<div class="form-group">
-				<input type="button" name="btn1" id="btn1" value="1" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn2" id="btn2" value="2" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn3" id="btn3" value="3" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn=" id="btn=" value="=" class="col-sm-2 btn btn-warning" class="form-control" onclick="result(id)">
+				<input type="text" name="txt" id="txt1" placeholder="Calculator" class="col-sm-5" class="form-control" onclick="calc()">
 			</div>
 		</div>
 		</form>
 	</div>
 	<script type="text/javascript">
-	var num1, num2, opr, len;
-
-		function clr(id) {
-			document.getElementById('txt1').value="";
-		}
-
-		function bckspc(id) {
-			len=document.getElementById('txt1').value.length;
-			var num=document.getElementById('txt1').value;
-			var index=num.substr(0,(len-1));
-			document.getElementById('txt1').value=index;
-		}
+	var num1, num2, opr;
 
 		function calc(num)	{
-			var txt = document.getElementById("txt1").value;
-			var decimal=txt.search('.');
-			if(decimal==(-1)||decimal==1)	{
-				if (txt!==num1)	{
-					document.getElementById('txt1').value += document.getElementById(num).value;
-				}
-				else{
-					document.getElementById("txt1").value = document.getElementById(num).value;
-				}
-			}
+			document.getElementById('txt1').value = document.getElementById('txt1').value + document.getElementById(num).value;
 		}
-
 		function calco(opr_id) {
 			num1 = document.getElementById('txt1').value;
 			opr = document.getElementById(opr_id).value;
-		}
+			document.getElementById('txt2').value=num1 + opr;
+			document.getElementById('txt1').value="";
 
+		}
 		function result() {
 			num2 = document.getElementById('txt1').value;
+			document.getElementById('txt3').value = num2;
 			var res=0;
 			switch (opr) {
 				case "+":
-					res=parseFloat(num1) + parseFloat(num2);
+					res=parseInt(num1) + parseInt(num2);
 					break;
 				case "-":
-					res=parseFloat(num1) - parseFloat(num2);
+					res=parseInt(num1) - parseInt(num2);
 					break;
 				case "*":
-					res=parseFloat(num1) * parseFloat(num2);
+					res=parseInt(num1) * parseInt(num2);
 					break;
 				case "/":
-					res=parseFloat(num1) / parseFloat(num2);
+					res=parseInt(num1) / parseInt(num2);
 					break;
 			}
 			document.getElementById('txt1').value=res;
