--- a/classes/July/31/calc.html
+++ b/classes/July/31/calc.html
@@ -10,41 +10,60 @@
 	<div class="container">
 		<form role="form">
 		<div class="row">
-			<div class="form-group">
-				<input type="text" name="txt" id="txt1" placeholder="Calculator" class="col-sm-5" class="form-control">
+			<div class="col-sm-5">
+				<div class="form-group">
+					<input type="text" name="txt" id="txt1" placeholder="Calculator" class="form-control">
+				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="form-group">
-				<input type="button" name="CE" id="CE" value="CE" class="col-sm-1 btn btn-info" class="form-control" onclick="bckspc(id)">
-				<input type="button" name="CE" id="C" value="C" class="col-sm-1 btn btn-info" class="form-control" onclick="clr(id)">
-				<input type="button" name="btn." id="btn." value="." class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
+			<div class="col-sm-5">
+				<div class="form-group">
+					<input type="button" name="CE" id="CE" value="CE" class="col-sm-3 btn btn-info" class="form-control" onclick="bckspc(id)">
+					<input type="button" name="CE" id="C" value="C" class="col-sm-3 btn btn-info" class="form-control" onclick="clr(id)">
+					<input type="button" name="btn=" id="btn=" value="=" class="col-sm-3 btn btn-warning" class="form-control" onclick="result(id)">
+					<input type="button" name="btn*" id="btn*" value="*" class="col-sm-3 btn btn-success" class="form-control" onclick="calco(id)">
+				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="form-group">
-				<input type="button" name="btn7" id="btn7" value="7" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn8" id="btn8" value="8" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn9" id="btn9" value="9" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn/" id="btn/" value="/" class="col-sm-1 btn btn-success" class="form-control" onclick="calco(id)">
-				<input type="button" name="btn*" id="btn*" value="*" class="col-sm-1 btn btn-success" class="form-control" onclick="calco(id)">
+			<div class="col-sm-5">
+				<div class="form-group">
+					<input type="button" name="btn7" id="btn7" value="7" class="col-sm-3 btn btn-primary" class="form-control" onclick="calc(id)">
+					<input type="button" name="btn8" id="btn8" value="8" class="col-sm-3 btn btn-primary" class="form-control" onclick="calc(id)">
+					<input type="button" name="btn9" id="btn9" value="9" class="col-sm-3 btn btn-primary" class="form-control" onclick="calc(id)">
+					<input type="button" name="btn/" id="btn/" value="/" class="col-sm-3 btn btn-success" class="form-control" onclick="calco(id)">
+				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="form-group">
-				<input type="button" name="btn4" id="btn4" value="4" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn5" id="btn5" value="5" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn6" id="btn6" value="6" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn-" id="btn-" value="-" class="col-sm-1 btn btn-success" class="form-control" onclick="calco(id)">
-				<input type="button" name="btn+" id="btn+" value="+" class="col-sm-1 btn btn-success" class="form-control" onclick="calco(id)">
+			<div class="col-sm-5">
+				<div class="form-group">
+					<input type="button" name="btn4" id="btn4" value="4" class="col-sm-3 btn btn-primary" class="form-control" onclick="calc(id)">
+					<input type="button" name="btn5" id="btn5" value="5" class="col-sm-3 btn btn-primary" class="form-control" onclick="calc(id)">
+					<input type="button" name="btn6" id="btn6" value="6" class="col-sm-3 btn btn-primary" class="form-control" onclick="calc(id)">
+					<input type="button" name="btn-" id="btn-" value="-" class="col-sm-3 btn btn-success" class="form-control" onclick="calco(id)">
+				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="form-group">
-				<input type="button" name="btn1" id="btn1" value="1" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn2" id="btn2" value="2" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn3" id="btn3" value="3" class="col-sm-1 btn btn-primary" class="form-control" onclick="calc(id)">
-				<input type="button" name="btn=" id="btn=" value="=" class="col-sm-2 btn btn-warning" class="form-control" onclick="result(id)">
+			<div class="col-sm-5">
+				<div class="form-group">
+					<input type="button" name="btn1" id="btn1" value="1" class="col-sm-3 btn btn-primary" class="form-control" onclick="calc(id)">
+					<input type="button" name="btn2" id="btn2" value="2" class="col-sm-3 btn btn-primary" class="form-control" onclick="calc(id)">
+					<input type="button" name="btn3" id="btn3" value="3" class="col-sm-3 btn btn-primary" class="form-control" onclick="calc(id)">
+					<input type="button" name="btn+" id="btn+" value="+" class="col-sm-3 btn btn-success" class="form-control" onclick="calco(id)">
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-5">
+				<div class="form-group">
+					<input type="button" name="btn." id="btn." value="." class="col-sm-3 btn btn-primary" class="form-control" onclick="dot(id)">
+					<input type="button" name="btn2" id="btn0" value="0" class="col-sm-3 btn btn-primary" class="form-control" onclick="calc(id)">
+					<input type="button" name="btn1" id="btnsqrt" value="sqrt" class="col-sm-3 btn btn-success" class="form-control" onclick="calco(id)">
+					<input type="button" name="btn3" id="btnper" value="%" class="col-sm-3 btn btn-success" class="form-control" onclick="calco(id)">
+				</div>
 			</div>
 		</div>
 		</form>
@@ -63,22 +82,37 @@
 			document.getElementById('txt1').value=index;
 		}
 
+		function dot(){
+			var txt=document.getElementById('txt1').value;
+			var dot1=txt.indexOf('.');
+			if (dot1==-1) {
+				txt += ".";
+				document.getElementById('txt1').value=txt;
+			}
+		}
+
 		function calc(num)	{
 			var txt = document.getElementById("txt1").value;
-			var decimal=txt.search('.');
-			if(decimal==(-1)||decimal==1)	{
-				if (txt!==num1)	{
-					document.getElementById('txt1').value += document.getElementById(num).value;
-				}
-				else{
-					document.getElementById("txt1").value = document.getElementById(num).value;
-				}
+			if (txt!==num1)	{
+				document.getElementById('txt1').value += document.getElementById(num).value;
+			}
+			else{
+				document.getElementById("txt1").value = document.getElementById(num).value;
 			}
 		}
 
 		function calco(opr_id) {
 			num1 = document.getElementById('txt1').value;
 			opr = document.getElementById(opr_id).value;
+			switch (opr) {
+				case "%":
+					document.getElementById("txt1").value=parseFloat(num1)/100;
+					break;
+				case "sqrt":
+					num1=parseFloat(num1);
+					document.getElementById("txt1").value=Math.sqrt(num1);
+					break;
+			}
 		}
 
 		function result() {
@@ -97,9 +131,14 @@
 				case "/":
 					res=parseFloat(num1) / parseFloat(num2);
 					break;
+				case "%":
+					res=parseFloat(num1)/100;
+					break;
 			}
 			document.getElementById('txt1').value=res;
 		}
 	</script>
+	<script type="text/javascript" src="../../js/jquery.min.js"></script>
+	<script type="text/javascript" src="../../js/bootstrap.min.js"></script>
 </body>
 </html>
